control-plane/manifests/directory/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openldap
  namespace: directory
  labels:
    app.kubernetes.io/name: openldap
    app.kubernetes.io/component: directory
spec:
  serviceName: openldap
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: openldap
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openldap
        app.kubernetes.io/component: directory
    spec:
      containers:
      - name: openldap
        image: osixia/openldap:1.5.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 389
          name: ldap
        - containerPort: 636
          name: ldaps
        readinessProbe:
          tcpSocket:
            port: 636
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 389
          initialDelaySeconds: 30
          periodSeconds: 30
        volumeMounts:
        - mountPath: /var/lib/ldap
          name: data
        - mountPath: /etc/ldap/slapd.d
          name: config
        - mountPath: /container/service/slapd/assets/certs
          name: certs
        - mountPath: /container/service/slapd/assets/config/bootstrap/ldif/custom
          name: bootstrap-ldif
      volumes:
      - name: config
        emptyDir: {}
      - name: certs
        secret:
          secretName: openldap-tls
      - name: bootstrap-ldif
        configMap:
          name: openldap-bootstrap-ldif
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ ReadWriteOnce ]
      resources:
        requests:
          storage: 1Gi
