control-plane/manifests/directory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openldap
  namespace: directory
  labels:
    app.kubernetes.io/name: openldap
spec:
  type: ClusterIP
  ports:
    - name: ldap
      port: 389
      targetPort: 389
    - name: ldaps
      port: 636
      targetPort: 636
  selector:
    app.kubernetes.io/name: openldap
